# bigdecimal

./: CMakeLists.txt  LICENSE  README.md
include/bigdecimal/: bigdecimal.h  bigdecimal_global.h
src/: bigdecimal.cpp
test/: CMakeLists.txt  bigdecimaltest.h  main.cpp  tst_bigdecimalconstructortest.h  tst_bigdecimalsubtractoperatortest.h  tst_bigdecimalsumoperatortest.h  tst_bigdecimaltest.h
